partition works